--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -8,5 +8,8 @@
     </head>
     <body>
         <h1>你好， {{ users.username }}！</h1>
+        {% for post in posts %}
+          <div><p>{{ post.author.username }} 在 TA 的大作中提到：<b>{{ post.body }}</b></p></div>
+        {% endfor %} 
     </body>
 </html>
