1. 添加服务端处理逻辑，允许提交用户名/密码和记住登录信息的选项 2. 当登录信息输入不完整时，提交后将留在 login 页面并显示出错信息 3. 当登录信息输入完整时，提交后将跳转到 index 页面并显示登录名等信息 4. 注意：目前尚未实现真正的登录逻辑，只是“假登录”

--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -12,6 +12,16 @@
             <a href="/login">登录</a>
         </div>
         <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+        <!-- flashed messages will show above -->
         {% block content %}
         {% endblock %}
     </body>
