--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -8,8 +8,9 @@
 	</head>
 	<body>
 		<div>引思网卡片库：
-			<a href="/index">首页</a>
-			<a href="/login">登录</a>
+			<a href="{{ url_for('index') }}">首页</a>
+			<a href="{{ url_for('cards') }}">卡片集</a>
+			<a href="{{ url_for('login') }}">登录</a>
 		</div>
 		<hr>
 		{% with messages = get_flashed_messages() %}
