--- a/webapp/templates/cards.html
+++ b/webapp/templates/cards.html
@@ -5,7 +5,10 @@
 	{% for card in cards %}
 		<div>
 			<p>{{ user.username }} 在卡片 <b>[{{ card.title }}]</b> 中写到：</p>
-			<h4>{{ card.content }}</h4>
+			<h4><pre>{{ card.content }}</pre></h4>
 		</div>
-	{% endfor %} 
+	{% endfor %}
+	<div>
+		<a href="{{ url_for('new_card') }}">添加新卡片</a>
+	</div>
 {% endblock %}
