--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -8,8 +8,7 @@
 	</head>
 	<body>
 		<div>引思网卡片库：
-			<a href="{{ url_for('index') }}">首页</a>
-			<a href="{{ url_for('cards') }}">卡片集</a>
+			<a href="{{ url_for('cards') }}">卡片列表</a>
 			<a href="{{ url_for('login') }}">登录</a>
 		</div>
 		<hr>
