1 .gitignore 中增加了 site_sync.sh 脚本 2 site_sync.sh 是用来执行 rsync via ssh 静态文件同步的(不进入版本库) 3 重构 sync_file_to_oss 方法, 这方法以后还得改 4 去掉 sync_media_files 中的 file_replace_with 调用, 使这个方法专注于媒体文件上传 5 调用 site_sync.sh, 目前这种处理方式不利于未来的自动化部署, 要想办法修改. 6 增加了对 pre 元素的样式控制

--- a/styles/default.css
+++ b/styles/default.css
@@ -33,6 +33,14 @@ blockquote {
   word-wrap: break-word;
 }
 
+pre {
+  background-color: #e0d7c4;
+  margin: 0;
+  padding: 3px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
 .spacer {
   clear: both;
   height: 6px;
